tests/compile-errors/ce-closure-type-check.valk

fn main() {
    let x : imut fn(int)() = fn(x: int) {} 
}
